--- a/Clawleash/Clawleash.csproj
+++ b/Clawleash/Clawleash.csproj
@@ -11,7 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MessagePack" Version="3.1.4" />
+    <PackageReference Include="MessagePack.Annotations" Version="3.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
+    <PackageReference Include="NetMQ" Version="4.0.2.2" />
   </ItemGroup>
 
   <ItemGroup>
