--- a/Clawleash.Abstractions/Clawleash.Abstractions.csproj
+++ b/Clawleash.Abstractions/Clawleash.Abstractions.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Clawleash.Abstractions</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.3" />
+  </ItemGroup>
+
 </Project>
