Update configuration and integrate

--- a/Clawleash/appsettings.json
+++ b/Clawleash/appsettings.json
@@ -25,5 +25,33 @@
     "DeniedDomains": [],
     "Headless": true,
     "ScreenshotOnAction": true
+  },
+  "ChatInterface": {
+    "EnableCli": true,
+    "InterfacesDirectory": null,
+    "EnableHotReload": true,
+    "Discord": {
+      "Enabled": false,
+      "Token": "",
+      "CommandPrefix": "!"
+    },
+    "Slack": {
+      "Enabled": false,
+      "BotToken": "",
+      "AppToken": ""
+    },
+    "WebSocket": {
+      "Enabled": false,
+      "ServerUrl": "ws://localhost:8080/chat",
+      "EnableE2ee": true,
+      "ReconnectIntervalMs": 5000,
+      "MaxReconnectAttempts": 10
+    },
+    "WebRtc": {
+      "Enabled": false,
+      "SignalingServerUrl": "ws://localhost:8080/signaling",
+      "EnableE2ee": true,
+      "StunServers": [ "stun:stun.l.google.com:19302" ]
+    }
   }
 }
