--- a/Clawleash/Clawleash.csproj
+++ b/Clawleash/Clawleash.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Clawleash.Contracts\Clawleash.Contracts.csproj" />
+    <ProjectReference Include="..\Clawleash.Abstractions\Clawleash.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +30,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.3" />
   </ItemGroup>
 
   <ItemGroup>
