--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,11 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
-# Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
+
+# Svelte/SPA build output
+Clawleash.Server/wwwroot/
+Clawleash.Server/Client/.svelte-kit/
+Clawleash.Server/Client/node_modules/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
