--- a/Clawleash.Interfaces.WebRTC/Clawleash.Interfaces.WebRTC.csproj
+++ b/Clawleash.Interfaces.WebRTC/Clawleash.Interfaces.WebRTC.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.3" />
-    <PackageReference Include="System.Net.WebSockets.Client" Version="4.3.2" />
     <PackageReference Include="System.Text.Json" Version="10.0.3" />
   </ItemGroup>
 
