--- a/Clawleash.Interfaces.WebRTC/Clawleash.Interfaces.WebRTC.csproj
+++ b/Clawleash.Interfaces.WebRTC/Clawleash.Interfaces.WebRTC.csproj
@@ -1,10 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <!-- Target Framework -->
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Clawleash.Interfaces.WebRTC</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+    <!-- NuGet Package Metadata -->
+    <PackageId>Clawleash.Interfaces.WebRTC</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>Clawleash</Authors>
+    <Description>WebRTC chat interface for Clawleash with native P2P communication support</Description>
+    <PackageTags>webrtc;p2p;chat;realtime;signalr;datachannel</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/yourname/clowleash</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+
+    <!-- NuGet Package Settings -->
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+
+    <!-- Native library embed settings -->
+    <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +36,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lucid.Rtc" Version="0.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.3" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
+  <!-- README for NuGet -->
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="" Condition="Exists('README.md')" />
   </ItemGroup>
 
 </Project>
