--- a/Clawleash/appsettings.json
+++ b/Clawleash/appsettings.json
@@ -30,6 +30,7 @@
     "EnableCli": true,
     "InterfacesDirectory": null,
     "EnableHotReload": true,
+    "BroadcastReplies": false,
     "Discord": {
       "Enabled": false,
       "Token": "",
